Prevent the error checkmark from overlapping the text in `Input`

--- a/app/components/ui/form/styles.scss
+++ b/app/components/ui/form/styles.scss
@@ -134,5 +134,6 @@
 		border-color: $yellow;
 		border-bottom-left-radius: 0;
 		border-bottom-right-radius: 0;
+		padding-right: 30px;
 	}
 }
